feat: complete the user API module
